tests/errors/unterminated_string.ne
function main(): int32
{
    print("Hello, World!\n)
}
